force-app/main/default/objects/Sub_Ledger_Number__c/Sub_Ledger_Number__c.object-meta.xml
<CustomObject>
    <label>Sub Ledger Number</label>
    <nameField>
        <label>Subledger</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Ledger Number</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>