force-app/main/default/objects/Sub_Ledger_Number__c/fields/Product_Specialty__c.field-meta.xml
<CustomField>
    <fullName>Product_Specialty__c</fullName>
    <description>Product specialty the subledger is set up for. This field is used in the expense detail report to categorize the expenses that are manually entered in JDE. With Oracle, we&apos;ll need an equivalent field on Opportunity.</description>
    <label>Product_Specialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>