force-app/main/default/objects/Sub_Ledger_Number__c/fields/Spend_Type__c.field-meta.xml
<CustomField>
    <fullName>Spend_Type__c</fullName>
    <label>Spend Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ADM</fullName>
            </value>
            <value>
                <fullName>MKTG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>