force-app/main/default/objects/Sub_Ledger_Number__c/fields/Subledger_Description__c.field-meta.xml
<CustomField>
    <fullName>Subledger_Description__c</fullName>
    <label>Subledger Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>